// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <h1
    class="Heading"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h1>
</div>
`;

exports[`renders the component h3 1`] = `
<div>
  <h3
    class="Heading"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h3>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div>
  <h1
    class="Heading my-extra-class"
    data-test-id="cf-ui-heading"
  >
    Heading
  </h1>
</div>
`;
